<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.sportseventsorganizer.MainActivity"
        android:orientation="vertical"
        android:background="@drawable/basketball_cort"
        android:weightSum="1">


        <Button
            android:id="@+id/viewEvents_btn"
            style="@style/mainActivityBtnStyle"
            android:text="@string/viewEvents"
            android:layout_marginTop="20dp"/>"
        <Button
                android:id="@+id/makeEvent_btn"
                style="@style/mainActivityBtnStyle"
                android:text="@string/makeEvent"
                android:layout_marginTop="30dp"/>
        <Button
            android:id="@+id/getMyEvents_btn"
            style="@style/mainActivityBtnStyle"
            android:text="@string/getMyEvents"
            android:layout_marginTop="230dp"
             />
    </LinearLayout>
</ScrollView>